7. Add support of composite events in dynamic list editor (qt3/qt4)
8. Add retry counter for some MBS sources - let reconnect server if
   it was down for some time. Useful for online analysis when server can
   be switched off very often for short time. Implemented in source classed,
   can be configured in go4analysis, qt3/at4 gui, hotstart.
9. Fix error in event selection of MBS sources like stream server   

Changes in Go4 v4.5.1 (November 2011)
1. Add force32=true flag to the Makefile, done to force 32 bit compilation and
   linking on 64-bit platform. Done to support such kind of MacOS machine,
   not tested (probably, not required) on Linux. 
2. Correctly treat "fetch when drawing" option in all cases. Before in some 
   situations (like double-click on multipad panel or drag-and-drop) object
   was fetched even if flag was disabled. Fixed in qt3/qt4 versions.
3. Adjust init scripts and README how to compile go4 in Windows.
4. Bugfix in composite event: When reading from TTree, setting the branch addresses 
   to the subcomponents failed in case that more subcomponents were in file than preallocated.
   Now we store the complete length of TObjArray with composite event and ensure that array 
   is not re-allocated during the tree read.
5. Bugfix/change in default TGo4EventElement::Fill() - valid flag was always
   set depending on BuildEvent() return value, did overrule user settings. Disabled this.   
6. Bugfix in gui - user source port number, specified in analysis configuration gui, 
   was not delivered to the user source constructor
7. New feature - possibility to specify optional port number for any MBS servers.
   Necessary for working with DABC where port number can be changed freely. Useful
   for virtual machines, where ports around 6000 are blocked.
8. Added support for x-axis time display in TGraph and TH1. New Items in Viewpanel Options menu:
   "X-Axis displays time" and "Set xaxis time format" 