@@ -379,6 +379,36 @@
           </item>
          </widget>
         </item>
+        
+        <item>
+         <widget class="QToolButton" name="ExtraBtn">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="toolTip">
+           <string>Show/hide extra options for event source</string>
+          </property>
+          <property name="text">
+           <string>+</string>
+          </property>
+         </widget>
+        </item>
+        
         <item>
          <widget class="QToolButton" name="MbsMonitorBtn">
           <property name="sizePolicy">
@@ -557,7 +587,7 @@
              </size>
             </property>
             <property name="specialValueText">
-             <string>default</string>
+             <string>dflt</string>
             </property>
             <property name="minimum">
              <number>0</number>
@@ -566,10 +596,69 @@
              <number>99999</number>
             </property>
             <property name="toolTip">
-             <string>Port number, 0 - default (depends from the source kind)</string>
+             <string>Port number, 0 - default, actual default value depends from the source kind</string>
             </property>
            </widget>
           </item>
+         </layout>
+        </item>
+        
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout317">
+          <item>
+           <widget class="QLabel" name="TextLabelTimeout">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>100</width>
+              <height>50</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Tmout:</string>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="SpinBoxTimeout">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>1</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="toolTip">
+             <string>Socket timeout for MBS sources.</string>
+            </property>
+            <property name="specialValueText">
+             <string>none</string>
+            </property>
+            <property name="suffix">
+             <string> s</string>
+            </property>
+            <property name="maximum">
+             <number>9999</number>
+            </property>
+            <property name="value">
+             <number>1</number>
+            </property>
+           </widget>
+          </item>
+          
          </layout>
         </item>
         
@@ -669,6 +758,7 @@
         </item>
        </layout>
       </item>
+      
       <item>
        <layout class="QHBoxLayout">
         <item>
@@ -716,41 +806,6 @@
           </property>
          </widget>
         </item>
-        <item>
-         <spacer name="spacer6">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Expanding</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>5</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QSpinBox" name="SpinBoxTimeout">
-          <property name="toolTip">
-           <string>Socket timeout for MBS sources.</string>
-          </property>
-          <property name="specialValueText">
-           <string>none</string>
-          </property>
-          <property name="suffix">
-           <string> s</string>
-          </property>
-          <property name="maximum">
-           <number>9999</number>
-          </property>
-          <property name="value">
-           <number>1</number>
-          </property>
-         </widget>
-        </item>
        </layout>
       </item>
      </layout>
@@ -758,7 +813,7 @@
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
+ <layoutdefault spacing="1" margin="3"/>
  <resources/>
  <connections>
   <connection>
@@ -874,6 +929,12 @@
    <signal>valueChanged(int)</signal>
    <receiver>TGo4ConfigStep</receiver>
    <slot>ChangeSourceTimeout(int)</slot>
+  </connection>
+  <connection>
+   <sender>ExtraBtn</sender>
+   <signal>clicked()</signal>
+   <receiver>TGo4ConfigStep</receiver>
+   <slot>ExtraBtn_clicked()</slot>
   </connection>
   <connection>
    <sender>MbsMonitorBtn</sender>
